apps/clica-sso-backend/k8s/socketio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clica-sso-socket-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://accounts.clicatecnologia.com.br"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/websocket-services: "clica-sso-backend-service"
spec:
  tls:
  - hosts:
    - socket.clicatecnologia.com.br
    secretName: clica-sso-socket-tls
  rules:
  - host: socket.clicatecnologia.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: clica-sso-backend-service
            port:
              number: 80
